# r_covid

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
app/: Cargo.toml
app/src/: lib.rs  rcdapplication.rs
core/: Cargo.toml
core/src/: lib.rs
covid/: Cargo.toml  build.rs
covid/src/: lib.rs  main.rs
gui/: Cargo.toml
gui/src/: lib.rs  rcdaboutwindow.rs  rcdareastatwindow.rs  rcdlistbycountrytypewindow.rs  rcdprovincedetailwindow.rs  rcdrecentstatv2window.rs  rcdtimelineservice1window.rs
gui/src/dingxiangyuan/: mod.rs  rcdareastatwindow.rs  rcdlistbycountrytypewindow.rs  rcdprovincedetailwindow.rs  rcdrecentstatv2window.rs  rcdtimelineservice1window.rs
resources/windows/: res.rc
web/: index.html  rcovid.js
