[package]
name = "rcovid"
version = "0.2.0"
edition = "2021"
authors = ["giserliang <hml8431386@163.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "^0.4.*", features = ["js-sys", "wasmbind"] }
image = "^0.24.*"
tracing = "^0.1.*"

rcovid_app = { path = "../app" }
rcovid_core = { path = "../core" }

[dependencies.egui]
version = "^0.18"
features = ["default_fonts"]

[dependencies.eframe]
version = "^0.18.0"
features = ["default_fonts"]

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
embed-resource = "^1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
windows = "0.32.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "*"
tracing-appender = "^0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tokio]
version = "~1.14"
features = ["full"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"