[package]
name = "rcovid_gui"
version = "0.2.0"
edition = "2021"
authors = ["giserliang <hml8431386@163.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcovid_core = { path = "../core" }

json = "^0.12"
linked-hash-map = "^0.5"
chrono = { version = "^0.4", features = ["js-sys", "wasmbind"] }

[dependencies.egui]
version = "^0.18"
features = ["default"]

[dependencies.egui_extras]
version = "^0.18"
features = ["svg", "image"]